{
  "version": 4,
  "terraform_version": "1.8.3",
  "serial": 350,
  "lineage": "3c929997-9fa3-b446-f91a-374995528bcb",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins-master",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "jenkins-master",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e001c9271cf7f3b9",
            "arn": "arn:aws:ec2:us-east-1:461086874723:instance/i-086f2c16d8509641f",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-086f2c16d8509641f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "aws-key1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f03a6f693b19c19b",
            "private_dns": "ip-10-1-1-119.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.1.119",
            "public_ip": "3.92.183.87",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0481637dde15046bf",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04fcffddf447d0d3d",
            "tags": {
              "Name": "jenkins-master"
            },
            "tags_all": {
              "Name": "jenkins-master"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b164bf052eff78be"
            ]
          },
          "dependencies": [
            "aws_security_group.Jenkins-SG",
            "aws_subnet.dml-public-subnet-01",
            "aws_vpc.dml-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nexus-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "nexus-server",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0bb84b8ffd87024d8",
            "arn": "arn:aws:ec2:us-east-1:461086874723:instance/i-06cf4b0a08ddebef6",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06cf4b0a08ddebef6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "aws-key1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-08ea31828982f783b",
            "private_dns": "ip-10-1-1-186.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.1.186",
            "public_ip": "52.90.188.181",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-04b221ec97c4597cb",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04fcffddf447d0d3d",
            "tags": {
              "Name": "nexus-server"
            },
            "tags_all": {
              "Name": "nexus-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-076bc0dcc1a0a846f"
            ]
          },
          "dependencies": [
            "aws_security_group.Nexus-SG",
            "aws_subnet.dml-public-subnet-01",
            "aws_vpc.dml-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "sonar-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "sonar-server",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e001c9271cf7f3b9",
            "arn": "arn:aws:ec2:us-east-1:461086874723:instance/i-006942d5272f4d8ef",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-006942d5272f4d8ef",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "aws-key1",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-09ba43477244ee741",
            "private_dns": "ip-10-1-1-41.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.1.41",
            "public_ip": "3.95.234.192",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-09cb507c571be4c17",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04fcffddf447d0d3d",
            "tags": {
              "Name": "sonar-server"
            },
            "tags_all": {
              "Name": "sonar-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-016b87df2c34a66e8"
            ]
          },
          "dependencies": [
            "aws_security_group.Sonar-SG",
            "aws_subnet.dml-public-subnet-01",
            "aws_vpc.dml-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "dml-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:461086874723:internet-gateway/igw-05e7e71b6f21f4bc3",
            "id": "igw-05e7e71b6f21f4bc3",
            "owner_id": "461086874723",
            "tags": {
              "Name": "dml-igw"
            },
            "tags_all": {
              "Name": "dml-igw"
            },
            "vpc_id": "vpc-067b36bcffad5330d"
          },
          "dependencies": [
            "aws_vpc.dml-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dml-public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:461086874723:route-table/rtb-0b1a5a852a1d1d251",
            "id": "rtb-0b1a5a852a1d1d251",
            "owner_id": "461086874723",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05e7e71b6f21f4bc3",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dml-public-rt"
            },
            "tags_all": {
              "Name": "dml-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-067b36bcffad5330d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.dml-igw",
            "aws_vpc.dml-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dml-rta-private-subnet-02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-050839e24812a0dec",
            "route_table_id": "rtb-0b1a5a852a1d1d251",
            "subnet_id": "subnet-024f1962dd2692d04"
          },
          "dependencies": [
            "aws_internet_gateway.dml-igw",
            "aws_route_table.dml-public-rt",
            "aws_subnet.dml-private-subnet-02",
            "aws_vpc.dml-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dml-rta-public-subnet-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-015802710dfb9b592",
            "route_table_id": "rtb-0b1a5a852a1d1d251",
            "subnet_id": "subnet-04fcffddf447d0d3d"
          },
          "dependencies": [
            "aws_internet_gateway.dml-igw",
            "aws_route_table.dml-public-rt",
            "aws_subnet.dml-public-subnet-01",
            "aws_vpc.dml-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Jenkins-SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:461086874723:security-group/sg-0b164bf052eff78be",
            "description": "Jenkins Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b164bf052eff78be",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow 8080 Traffic",
                "from_port": 8080,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow Jenkins Traffic",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH Traffic",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Jenkins-SG",
            "name_prefix": "",
            "owner_id": "461086874723",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Jenkins-SG"
            },
            "tags_all": {
              "Name": "Jenkins-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-067b36bcffad5330d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dml-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Nexus-SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:461086874723:security-group/sg-076bc0dcc1a0a846f",
            "description": "Nexus Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-076bc0dcc1a0a846f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow 8081 Traffic",
                "from_port": 8081,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8081
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH Traffic",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Nexus-SG",
            "name_prefix": "",
            "owner_id": "461086874723",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Nexus-SG"
            },
            "tags_all": {
              "Name": "Nexus-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-067b36bcffad5330d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dml-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Sonar-SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:461086874723:security-group/sg-016b87df2c34a66e8",
            "description": "Sonar Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-016b87df2c34a66e8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH Traffic",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH Traffic",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Sonar-SG",
            "name_prefix": "",
            "owner_id": "461086874723",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Sonar-SG"
            },
            "tags_all": {
              "Name": "Sonar-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-067b36bcffad5330d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dml-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_all_Nexus-SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "",
            "from_port": 0,
            "id": "sgrule-4226781193",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-076bc0dcc1a0a846f",
            "security_group_rule_id": "sgr-02d7144ad03f9fe54",
            "self": false,
            "source_security_group_id": "sg-0b164bf052eff78be",
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.Jenkins-SG",
            "aws_security_group.Nexus-SG",
            "aws_vpc.dml-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_from_jenkins_to_sonarqube",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "",
            "from_port": 0,
            "id": "sgrule-2720023524",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-016b87df2c34a66e8",
            "security_group_rule_id": "sgr-05caac9f2b156a523",
            "self": false,
            "source_security_group_id": "sg-0b164bf052eff78be",
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.Jenkins-SG",
            "aws_security_group.Sonar-SG",
            "aws_vpc.dml-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_from_sonarqube_to_jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "",
            "from_port": 0,
            "id": "sgrule-1118456975",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0b164bf052eff78be",
            "security_group_rule_id": "sgr-0cdb778168a568065",
            "self": false,
            "source_security_group_id": "sg-016b87df2c34a66e8",
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.Jenkins-SG",
            "aws_security_group.Sonar-SG",
            "aws_vpc.dml-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dml-private-subnet-02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:461086874723:subnet/subnet-024f1962dd2692d04",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-024f1962dd2692d04",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "461086874723",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dml-public-subnet-02"
            },
            "tags_all": {
              "Name": "dml-public-subnet-02"
            },
            "vpc_id": "vpc-067b36bcffad5330d"
          },
          "dependencies": [
            "aws_vpc.dml-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dml-public-subnet-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:461086874723:subnet/subnet-04fcffddf447d0d3d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04fcffddf447d0d3d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "461086874723",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dml-public-subnet-01"
            },
            "tags_all": {
              "Name": "dml-public-subnet-01"
            },
            "vpc_id": "vpc-067b36bcffad5330d"
          },
          "dependencies": [
            "aws_vpc.dml-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "dml-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:461086874723:vpc/vpc-067b36bcffad5330d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-083fe5b938950dd71",
            "default_route_table_id": "rtb-0929f6922f568dbd0",
            "default_security_group_id": "sg-043a6ac7f17f62041",
            "dhcp_options_id": "dopt-0cfcb3c09ca7b6808",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-067b36bcffad5330d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0929f6922f568dbd0",
            "owner_id": "461086874723",
            "tags": {
              "Name": "dml-vpc"
            },
            "tags_all": {
              "Name": "dml-vpc"
            }
          }
        }
      ]
    }
  ]
}